# ot-github-issue-miner

./: ARCHITECTURE.md  CHANGES_SUMMARY.md  DEVELOPMENT.md  LICENSE  QUICKREF.md  README.md  README_NEW.md  TEST_LLM.md  pyproject.toml  requirements.txt  setup.py  test_llm_local.py
.github/workflows/: mine-scenarios-regex.yml
ot_miner/: __init__.py  __main__.py  cli.py  config.py  miner.py  utils.py
ot_miner/extractors/: __init__.py  base.py  llm.py  regex.py
ot_miner/loaders/: __init__.py
ot_miner/models/: __init__.py  llm_models.py
ot_miner/prompts/: __init__.py  llm_prompts.py
ot_miner/writers/: __init__.py
results/: mined-scenarios.csv  mined-scenarios.json
test-results/: mined-scenarios.csv  mined-scenarios.json
