[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ot-miner"
version = "0.1.0"
description = "Two-pass GitHub issue scenario miner for Open Targets platform testing"
readme = "README.md"
license = {text = "Apache License 2.0"}
authors = [{name = "Open Targets"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
ot-miner = "ot_miner.cli:main"

[project.urls]
Homepage = "https://github.com/opentargets/ot-github-issue-miner"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
